Ajout de la classe Network. Pas encore tester en reseau attend la fin du serveur